--- a/GestionMecenatGSB/GestionMecenatGUI.csproj
+++ b/GestionMecenatGSB/GestionMecenatGUI.csproj
@@ -64,6 +64,12 @@
     <Compile Include="FormAjoutPartenariat.Designer.cs">
       <DependentUpon>FormAjoutPartenariat.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormConsultAssoc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormConsultAssoc.Designer.cs">
+      <DependentUpon>FormConsultAssoc.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormMenu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +87,9 @@
     <EmbeddedResource Include="FormAjoutPartenariat.resx">
       <DependentUpon>FormAjoutPartenariat.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormConsultAssoc.resx">
+      <DependentUpon>FormConsultAssoc.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormMenu.resx">
       <DependentUpon>FormMenu.cs</DependentUpon>
     </EmbeddedResource>
@@ -93,6 +102,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -102,9 +112,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GestionMecenatBLL\GestionMecenatBLL.csproj">
