--- a/GestionMecenatGSB/GestionMecenatGUI.csproj
+++ b/GestionMecenatGSB/GestionMecenatGUI.csproj
@@ -94,6 +94,12 @@
     <Compile Include="FormModifPartenariats.Designer.cs">
       <DependentUpon>FormModifPartenariats.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormSupprPartenariat.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSupprPartenariat.Designer.cs">
+      <DependentUpon>FormSupprPartenariat.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormAjoutAssociation.resx">
@@ -119,6 +125,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormModifPartenariats.resx">
       <DependentUpon>FormModifPartenariats.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormSupprPartenariat.resx">
+      <DependentUpon>FormSupprPartenariat.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
