--- a/GestionMecenatGSB/GestionMecenatGUI.csproj
+++ b/GestionMecenatGSB/GestionMecenatGUI.csproj
@@ -94,6 +94,12 @@
     <Compile Include="FormMenu.Designer.cs">
       <DependentUpon>FormMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormModifLimiteMecenat.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormModifLimiteMecenat.Designer.cs">
+      <DependentUpon>FormModifLimiteMecenat.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormModifPartenariats.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -131,6 +137,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormMenu.resx">
       <DependentUpon>FormMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormModifLimiteMecenat.resx">
+      <DependentUpon>FormModifLimiteMecenat.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormModifPartenariats.resx">
       <DependentUpon>FormModifPartenariats.cs</DependentUpon>
